@@ -1,5 +1,5 @@
 /*
- * "$Id: devices.c,v 1.14.2.7 2004/06/29 13:15:10 mike Exp $"
+ * "$Id: devices.c,v 1.14.2.8 2004/10/04 19:48:56 mike Exp $"
  *
  *   Device scanning routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -480,5 +480,5 @@ sigalrm_handler(int sig)	/* I - Signal number */
 
 
 /*
- * End of "$Id: devices.c,v 1.14.2.7 2004/06/29 13:15:10 mike Exp $".
+ * End of "$Id: devices.c,v 1.14.2.8 2004/10/04 19:48:56 mike Exp $".
  */
