@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.59 2004/09/30 14:39:06 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.60 2004/10/04 19:48:56 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -1055,7 +1055,7 @@ StartPolling(void)
   * polling daemon...
   */
 
-  if (cupsdPipe(statusfds))
+  if (cupsdOpenPipe(statusfds))
   {
     LogMessage(L_ERROR, "Unable to create polling status pipes - %s.",
 	       strerror(errno));
@@ -2114,5 +2114,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.59 2004/09/30 14:39:06 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.60 2004/10/04 19:48:56 mike Exp $".
  */
